# Flir-Lepton

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.rpi-buster  Lepton_I2C.cpp  Lepton_I2C.h  MyLabel.cpp  MyLabel.h  README.md  SPI.cpp  build-raspicam.sh  build-travis.sh  build.sh  camerathread.cpp  camerathread.hpp  common.hpp  image.cpp  image.hpp  imagecomposerthread.cpp  imagecomposerthread.hpp  leptoncamera.cpp  leptoncamera.h  leptonsensor.cpp  leptonsensor.h  leptonthread.cpp  leptonthread.hpp  leptonutils.cpp  leptonutils.h  logger.cpp  logger.h  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mylabel.cpp  mylabel.hpp  palettes.cpp  palettes.h  temperature.cpp  (+4 more)
leptonSDKEmb32PUB/: CMakeLists.txt
log/: CMakeLists.txt  logger.cpp  logger.h
resources/: coco_labels.txt
src/: CMakeLists.txt  Lepton_I2C.cpp  Lepton_I2C.h  SPI.cpp  SPI.h  camerathread.cpp  camerathread.hpp  leptonthread.cpp  leptonthread.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mylabel.cpp  palettes.h
src/LeptonSDKEmb32PUB/: CMakeLists.txt
src/log/: CMakeLists.txt  instrumentor.h  logger.cpp  logger.h
src/socket/: CMakeLists.txt  commonconnection.cpp  commonconnection.hpp  tcpclient.cpp  tcpclient.hpp  tcpserver.cpp  tcpserver.h  tcpserver.hpp  tcpserverui.cpp  tcpserverui.hpp  tcpthread.cpp  tcpthread.hpp
tf/: CMakeLists.txt  colormanager.cpp  colormanager.hpp  findmodel.cpp  findmodel.hpp  image_utils.hpp  image_utils_impl.hpp  label_utils.cpp  label_utils.hpp  labels.cpp  labels.hpp  list_colour.cpp  list_colour.hpp  model_support_function.hpp  model_tpu.cpp  model_tpu.hpp  object_detection.cpp  object_detection.hpp  tensordata.hpp  tensordata_impl.hpp  util_label_image.cpp  util_label_image.hpp
